Bug 167185 - RTF: a table imports with wrong cell widths after commit d00181e8c1ead5020cc8fee47ee7af7fc5039552
Summary: RTF: a table imports with wrong cell widths after commit d00181e8c1ead5020cc8...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2025-06-24 10:58 UTC by Mike Kaganski
Modified: 2025-06-26 16:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A test document (274 bytes, application/msword)
2025-06-24 10:58 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-06-24 10:58:29 UTC
Created attachment 201442 [details]
A test document

Open the attachment. After commit d00181e8c1ead5020cc8fee47ee7af7fc5039552, its cells in all rows after the first have wrong widths.
Comment 1 Mike Kaganski 2025-06-24 11:44:42 UTC
https://gerrit.libreoffice.org/c/core/+/186890
Comment 2 Commit Notification 2025-06-24 15:22:38 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/07fa13b3319d2d5bc2ddf2f6bdbf5167db0d9936

tdf#167185: make sure that cell width corrections don't accumulate

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-06-26 16:04:37 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/c0f2b94e176d163591d7e11ba5956744c2579f05

tdf#167185: make sure that cell width corrections don't accumulate

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.