tdf#167185: make sure that cell width corrections don't accumulate

The problem was, that several rows may share the same row definition,
and the same RTFSprms in the current state. In commit
d00181e8c1ead5020cc8fee47ee7af7fc5039552 (tdf#167169: postpone \trleftN
processing until \row, 2025-06-23), RTFDocumentImpl::prepareProperties
started to modify existing values inside table row sprms in place; and
that resulted in accumulating changes, where each next row was getting
more corrections of already corrected widths.

This change copies the RTFSprms for correction, avoiding the problem.

Change-Id: Ia199862c7b8983d93d2fce4898fb60bf8b4a1a4f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186890
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>