sw/source/writerfilter/rtftok/rtfsprm.cxx
@@ -481,6 +481,12 @@ RTFSprms::RTFSprms()
 
 RTFSprms::~RTFSprms() = default;
 
+RTFSprms::RTFSprms(RTFSprms const& source, CopyForWrite)
+    : RTFSprms(source)
+{
+    ensureCopyBeforeWrite();
+}
+
 void RTFSprms::clear()
 {
     if (m_pSprms->GetRefCount() == 1)
